projects/DigitPop-CMS/src/app/home/home.component.scss
main.landing,
.video-players {
    display        : flex;
    justify-content: space-between;
    align-items    : center;
}

main.landing {
    min-height: calc(100vh - 64px);
    padding   : 50px;
}

.dp-background {
    background     : url("../../assets/img/dgpop_back.png") repeat right 200px top;
    background-size: 50%;
}

.dp-blackgradient {
    background-color: #000000;
    background-image: linear-gradient(147deg, #000000 0%, #434343 74%);
}

.video-players {
    min-width : 100%;
    column-gap: 50px;
    row-gap   : 50px;
    flex-wrap : wrap;
}

.video-iframe {
    width          : calc(50% - 25px);
    min-width      : 320px;
    display        : inline-flex;
    flex-direction : column;
    justify-content: center;
    align-items    : flex-start;
}

.video-iframe h1 {
    font-family  : 'Fraunces', serif;
    margin-bottom: 50px;
}

.video-iframe h1::before {
    opacity         : 0.25;
    display         : block;
    content         : "";
    height          : 3px;
    width           : 75%;
    margin-bottom   : 15px;
    border-radius   : 3px;
    background-color: #fff;
}

.video-iframe iframe {
    height       : 500px;
    width        : 100%;
    border-radius: 10px;
}

@media (max-width: 991.98px) {
    .video-iframe {
        width: 100%;
    }
}

